--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -179,11 +179,12 @@
         }
 
         &.progressbar { // progress bar in treeviews
+            @include linear-gradient($selected_bg_color);
             @if $variant == light { color: $base_color; }
 
             border-radius: $roundness;
             border: 1px solid $selected_borders_color;
-            background-color: $selected_bg_color;
+            //background-color: $selected_bg_color;
             //background-image: linear-gradient(to bottom, $selected_bg_color, darken($selected_bg_color, .1));
             //box-shadow: inset 0 1px $fg_color,
             //0 1px if($variant == "light", transparentize($black, .8), transparentize($black, .9));
